# Programmers

./: .gitignore  .gitmessage.txt  README.md  main.py  pyproject.toml
.github/workflows/: update-readme-tree.yml
Algorithm/: Test.ipynb
Gemini_example/: Confusion_Matrix.py  Custom_Dataset.py  Equipment_error.py  Exam_Test.ipynb  Test.ipynb  Test2.ipynb  Transfer_Learning.py  csv_file_creat.py
Level1/: Add_missing_num.py  Add_negative_positive_.py  Determination_int_square_root.py  Even_Odd.py  Find_remainder1.py  Harshad_Num.py  Int_descending_order.py  Number_of_py_in_str.py  array_of_numbers_that_fall_apart.py  change_str_to_int.py  mean.py  reversing_array.py  sep_x_with_n_number.py  sum_of_divisors.py  sum_of_each_digit.py  sum_of_integers_between_two_numbers.py
Level2/: Perfect_Crime.py  correct_parentheses.py  make_min.py  max_min.py
Level3/: DFS_BFS.py  Int_triangle.py
scripts/: update_readme_tree.py
